fix: Fixed GetValidToken response
